# py-utils

./: .gitignore  Event.py  LICENSE  README.md  _json.py  _types.py  cmd_args.py  curl.py  ffmpeg.py  fileTools.py  formats.py  ftp.py  future.py  fxgui.py  geometry.py  install  ipc.py  json2.py  log.py  mesure.py  ml_time.py  network.py  process.py  rand.py  stringTools.py  thread.py  uninstall  utils.py  youtube.py
boilerplate/: README.md  help.py  templates.py
boilerplate/cpp/: __init__.py
boilerplate/doc/: compile.txt  nvim.txt
boilerplate/mlgui/: __init__.py  app_class.cpp  app_class.h  win_class.cpp  win_class.h
boilerplate/templates_files/blender_addon/: __init__.py  menus.py  prefs.py
boilerplate/templates_files/cpp_project/: CMakeLists.txt  install  make
